<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_100"
    android:orientation="vertical">

    <include layout="@layout/item_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_camera" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_rounded_corners"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_rounded_corners"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_rounded_corners"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_rounded_corners"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />

            <EditText
                android:id="@+id/et_re_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text_rounded_corners"
                android:hint="@string/hint_re_password"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_logon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/splash_logon" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_cancel" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
